add kc
